docs(code-excellence): update reference files with expert patterns and anti-patterns
Add detailed decision trees, context branching guides, and language-specific best practices
Include pattern catalog with multi-language implementations and anti-pattern library
Update Kotlin, Python, and Go references with expert-level guidance